# claude-slack-bridge

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  Makefile  README.md  README.zh.md  pyproject.toml
.claude-plugin/: marketplace.json
commands/: slack-bridge.md
hooks/: hooks.json
plugins/slack-bridge/: CLAUDE.md
plugins/slack-bridge/.claude-plugin/: plugin.json
plugins/slack-bridge/commands/: logs.md  slack-bridge-logs.md  slack-bridge-status.md  slack-bridge-stop.md  start-daemon.md  status.md  stop-daemon.md  sync-off.md  sync-on.md  sync-ring.md
plugins/slack-bridge/hooks/: hooks.json
src/claude_slack_bridge/: approval.py  cli.py  config.py  conversation_parser.py  daemon.py  daemon_events.py  daemon_http.py  daemon_stream.py  hooks.py  http_api.py  permissions.py  process_pool.py  registry.py  session_manager.py  slack_client.py  slack_formatter.py  stream_parser.py
tests/: conftest.py  test_config.py  test_daemon.py  test_hooks.py  test_http_api.py  test_session_id_resolver.py  test_slack_formatter.py
