[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-slack-bridge"
version = "0.4.5"
description = "Bridge Claude Code TUI sessions to Slack"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9,<4",
    "slack-sdk>=3.27,<4",
    "click>=8.1,<9",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-aiohttp>=1.0",
    "aioresponses>=0.7",
]

[project.scripts]
claude-slack-bridge = "claude_slack_bridge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_slack_bridge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
